--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <tr>
             <td><button class="operation">log</button></td>
             <td><button class="operation">exp</button></td>
-            <td><button class="operation">abs</button></td>
+            <td><button class="operation">|x|</button></td>
             <td><button class="operation">ceil</button></td>
             <td><button class="operation">floor</button></td>
         </tr>
@@ -47,6 +47,7 @@
         <td><button class="operation">x<sup>2</sup></button></td>
         <td><button class="operation">sqrt</button></td>
         <td><button class="operation">+/-</button></td>
+        <td><button class="operation">10<sup>x</sup></button></td>
       </tr>
       <tr>
         <td><button class="number">7</button></td>
