--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
 }
 @media only screen {
 	body {
-		margin: 2em auto;
+		margin: 0em;
 		max-width: 900px;
 		color: rgb(55, 53, 47);
 	}
@@ -345,9 +345,8 @@ img.icon {
 
 .page-cover-image {
 	display: block;
-	object-fit: cover;
-	width: 100%;
-	max-height: 30vh;
+	object-fit: fill;
+	width: 100vw;
 }
 
 .page-header-icon {
